# Leviathan

./: .eslintrc.cjs  .gitignore  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  ROADMAP.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  web-test-runner.config.mjs
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: HLPS-dev.agent.md
.github/workflows/: build.yml  ci.yml
docs/: oauth-setup.md
e2e/: playwright.config.ts  tsconfig.json
e2e/fixtures/: tauri-mock.ts  test-helpers.ts
e2e/pages/: app.page.ts  dialogs.page.ts  panels.page.ts
e2e/tests/: analytics.spec.ts  azure-devops-dialog.spec.ts  bisect-dialog.spec.ts  bitbucket-dialog.spec.ts  blame-view.spec.ts  branches.spec.ts  cherry-pick-dialog.spec.ts  commit-details.spec.ts  commit-panel.spec.ts  commit.spec.ts  config-dialogs.spec.ts  context-menus.spec.ts  create-tag-dialog.spec.ts  dialogs.spec.ts  diff.spec.ts  file-history.spec.ts  file-status-context-menu.spec.ts  gitflow-panel.spec.ts  github-dialog.spec.ts  gitlab-dialog.spec.ts  graph.spec.ts  interactive-rebase.spec.ts  keyboard.spec.ts  local-ai-settings.spec.ts  merge-editor.spec.ts  multi-account-add.spec.ts  multi-account-switch.spec.ts  oauth.spec.ts  oidc-dialog.spec.ts  output-panel.spec.ts  profiles-integrations-flows.spec.ts  profiles-integrations-management.spec.ts  profiles-integrations.spec.ts  provider-issue-creation.spec.ts  reflog-dialog.spec.ts  remote-dialog.spec.ts  remote-operations.spec.ts  repo-tabs.spec.ts  repository-health-dialog.spec.ts  search-bar.spec.ts  (+9 more)
plan/: cross-platform-filesystem-technical-spike.md  graph-rendering-technical-spike.md  leviathan-development-plan.md  libgit2-limitations-technical-spike.md
reviews/: CONVERGED-REVIEW.md  round1-dot.md  round1-marcus.md  round1-vera.md  round2-dot.md  round2-marcus.md  round2-vera.md
src/: app-shell.ts  index.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  test_utils.rs
src-tauri/src/commands/: advanced_search.rs  ai.rs  archive.rs  autofetch.rs  avatar.rs  azure_devops.rs  bisect.rs  bitbucket.rs  bookmarks.rs  branch.rs  branch_cleanup.rs  branch_rules.rs  bundle.rs  checkout_file.rs  clean.rs  clipboard.rs  commit.rs  compare.rs  config.rs  credentials.rs  custom_actions.rs  describe.rs  diff.rs  difftool.rs  embedding_index.rs  encoding.rs  file.rs  gitattributes.rs  gitflow.rs  github.rs  gitignore.rs  gitlab.rs  gpg.rs  graph.rs  hooks.rs  integration_accounts.rs  issue_templates.rs  jira.rs  lfs.rs  local_ai.rs  (+38 more)
src-tauri/src/models/: branch.rs  commit.rs  conflict.rs  diff.rs  integration_accounts.rs  mod.rs  remote.rs  repository.rs  unified_profile.rs  workflow.rs  workspace.rs
src-tauri/src/services/: ai_service.rs  autofetch_service.rs  cancellation.rs  commit_index.rs  credentials_service.rs  git_service.rs  github_app.rs  keyring_util.rs  loopback_server.rs  mod.rs  oauth.rs  update_service.rs  watcher_service.rs
src-tauri/src/services/ai/: config.rs  mod.rs
src-tauri/src/services/ai/local/: gguf_engine.rs  mod.rs  model_manager.rs  model_registry.rs  system_detect.rs
src-tauri/src/services/ai/mcp/: mod.rs  server.rs  tools.rs
src-tauri/src/services/ai/providers/: anthropic.rs  gemini.rs  github_copilot.rs  local_inference.rs  mod.rs  ollama.rs  openai_compatible.rs
src-tauri/src/services/embedding/: embedding_index.rs  embedding_model.rs  mod.rs  onnx_engine.rs  vector_store.rs
src-tauri/src/utils/: cli_safety.rs  command.rs  mod.rs
src-tauri/tests/: cherry_pick_timestamp.rs  commit_message_harness.rs  local_ai_integration.rs
src/__tests__/: app-shell-multi-repo.test.ts  app-shell-output-panel.test.ts  app-shell-palette-integrations.integration.test.ts  app-shell-pull-stash-copy.integration.test.ts  app-shell-ref-context-menu.integration.test.ts  app-shell.test.ts  conflict-alerts.test.ts
src/components/: index.ts
src/components/__tests__/: auto-stash-checkout.test.ts  diff-virtual-scroll.test.ts  lv-branch-list-checkout.integration.test.ts  lv-branch-list-checkout.test.ts  lv-branch-list-tracking.test.ts  lv-branch-list.test.ts  lv-diff-view-partial-staging.test.ts  lv-file-status.test.ts  lv-gitflow-panel.test.ts  lv-remote-dialog-actions.test.ts  lv-search-bar-events.test.ts  lv-search-bar-presets.test.ts  lv-search-bar.test.ts  lv-settings-external-tools.test.ts  lv-stash-list.test.ts  lv-tag-list-filter-sort.test.ts  lv-tag-list.test.ts
src/components/common/: index.ts  lv-avatar.ts  lv-button.ts  lv-input.ts  lv-progress-indicator.ts  lv-toast-container.ts
src/components/dashboard/: index.ts  lv-context-dashboard.ts  (+3 more)
src/graph/: canvas-renderer.ts  graph-layout.service.ts  index.ts  lane-assignment.ts  spatial-index.ts  virtual-scroll.ts
src/mixins/: code-render-mixin.ts
src/services/: ai.service.ts  cache.service.ts  credential.service.ts  dialog.service.ts  drag-drop.service.ts  embedding-index.service.ts  error-suggestion.service.ts  git.service.ts  index.ts  integration-accounts.service.ts  keyboard.service.ts  local-ai.service.ts  mcp.service.ts  notification.service.ts  oauth.service.ts  output-log.service.ts  progress.service.ts  search-index.service.ts  tauri-api.ts  unified-profile.service.ts  update.service.ts  watcher.service.ts  workspace.service.ts
src/stores/: commits.store.ts  index.ts  integration-accounts.store.ts  repository.store.ts  settings.store.ts  ui.store.ts  unified-profile.store.ts  workflow.store.ts  workspace.store.ts
src/styles/: code-styles.ts  index.ts  shared-styles.ts  tokens.css
src/types/: api.types.ts  git.types.ts  graph.types.ts  index.ts  integration-accounts.types.ts  oauth.types.ts  unified-profile.types.ts  workflow.types.ts
src/utils/: diff-utils.ts  external-link.ts  format.ts  fuzzy-search.ts  index.ts  logger.ts  md5.ts  platform.ts  shiki-highlighter.ts  syntax-highlighter.ts
test-results/: .last-run.json
(+233 files in other folders)
