[package]
name = "leviathan"
version = "0.2.27"
description = "A fully-featured, open-source, cross-platform Git GUI client"
authors = ["Leviathan Contributors"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "leviathan_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.38", features = ["bundled"] }
keyring = "3"
notify = "8"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22.1"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
glob = "0.3"

# AI Inference
llama-cpp-2 = "0.1"
hf-hub = { version = "0.4", default-features = false, features = ["native-tls", "tokio"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Required for stronghold plugin performance in dev mode
[profile.dev.package.scrypt]
opt-level = 3
