[package]
name = "leviathan"
version = "0.2.72"
description = "A fully-featured, open-source, cross-platform Git GUI client"
authors = ["Leviathan Contributors"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "leviathan_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.39", features = ["bundled"] }
notify = "8"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "query", "form", "http2", "stream"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22.1"
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4"] }
glob = "0.3"
once_cell = "1"
chardetng = "0.1"
encoding_rs = "0.8"

# Archive support
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

# AI Provider System
async-trait = "0.1"
futures-util = "0.3"

# Local AI inference
sysinfo = "0.38"
llama-cpp-2 = { version = "0.1", default-features = false }

# Embedding & semantic search
sqlite-vec = "0.1.8-alpha.1"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.5", features = ["tokio"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# Secret detection
regex = "1"

# OAuth System
sha2 = "0.10"
rand = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"

# Keyring crate only used on non-macOS; macOS uses `security` CLI directly
# to avoid keychain ACL prompts that the keyring crate triggers on dev builds
[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = { version = "3", features = ["windows-native", "linux-native"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["llama-cpp-2/cuda"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "debuginfo"
